# Pixel-Tracer

./: CMakeLists.txt  README.md  area.c  area.h  circle.c  commands.c  commands.h  id.c  id.h  line.c  line.h  main.c  pixel.c  pixel.h  point.c  point.h  polygon.c  polygon.h  rectangle.c  rectangle.h  shapes.c  shapes.h  square.h
C_PROJECT/: CMakeLists.txt  README.md  area.c  area.h  circle.c  circle.h  commands.c  id.h  line.c  main.c  pixel.h  polygon.h  rectangle.c  shapes.h  square.c  square.h
